2006-05-04	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c: Use newly added XfceTitledDialog.
	* configure.in.in: Bump required package versions.
	* settings/session/session.c, settings/splash/splash.c: Use newly
	  added XfceTitledDialog.
	* engines/balou/config.c, engines/simple/simple.c: Make sure we can
	  still use XfceFramebox for now. Will be updated later.
	* xfce4-autostart-editor/xfae-model.c(xfae_item_new): Remove unused
	  variable.
	* po/xfce4-session.pot, po/*.po: Updated.

2006-05-04	Benedikt Meurer <benny@xfce.org>

	* xfce4-autostart-editor/xfae-model.c(xfae_item_new): Properly handle
	  OnlyShowIn and NotShowIn in the autostart editor.

2006-04-19	Benedikt Meurer <benny@xfce.org>

	* settings/session/session.c(mcs_plugin_init),
	  settings/splash/splash.c(mcs_plugin_init): Use separate translation
	  for the settings manager button label. Bug #1669.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.90.1 ===
	* configure.in.in: Bump dependencies.
	* NEWS, configure.in.in: Bump version.
	* po/xfce4-session.pot, po/*.po: Updated.
	* xfce4-session.spec.in: Update RPM spec file.
	* xfce4-session/main.c(main): Update copyright date.
	* xfce4-session.rc: Update Failsafe session.

2006-04-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c(shutdownDialog): Apply patch from Jani
	  Monoses to fix "End session" dialog. Bug #1663.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c: Fix indentation.

2005-11-30	Benedikt Meurer <benny@xfce.org>

	* settings/session/session.c, settings/splash/splash.c: Fix naming
	  inconsistency for kiosk mode settings. This fixes bug #1246.

2005-09-01	Benedikt Meurer <benny@xfce.org>