@@ -1,3 +1,9 @@
+2006-05-15	Benedikt Meurer <benny@xfce.org>
+
+	* xfce4-session/xfsm-manager.c(xfsm_manager_close_connection): Run
+	  discard command when client terminates in IDLE state.
+	* xfce4-session.rc: Add Thunar to the default session. Bug #1465.
+
 2006-05-04	Benedikt Meurer <benny@xfce.org>
 
 	* xfce4-tips/main.c: Use newly added XfceTitledDialog.
